--- a/src/main/resources/templates/students/student-list.html
+++ b/src/main/resources/templates/students/student-list.html
@@ -480,7 +480,7 @@
                         <td th:text="${student.paymentDate}"></td>
                         <td class="action-cell">
                           <div class="d-flex flex-nowrap justify-content-center gap-0">
-                            <a th:href="@{'/students/edit/' + ${student.id}}" class="action-icon edit" title="編集">
+                            <a th:href="@{'/students/student-update/' + ${student.id}}" class="action-icon edit" title="編集">
                               <i class="bi bi-pencil-square"></i>
                             </a>
                             <a th:href="@{'/students/detail/' + ${student.id}}" class="action-icon detail" title="明細">
